--- a/index.html
+++ b/index.html
@@ -23,17 +23,21 @@
             <div class="paypanel">
               <div class="imagpanel">
                 <img src="./images/icon-music.svg" alt="">
-              <div class="annualplan">Annual Plan
               </div>
-              <div class="price">$59.99/year
+              <div class="pay">
+                <div class="annualplan">Annual Plan
+                </div>
+                <div class="price">$59.99/year
+                </div>
               </div>
               <div class="changpanel">Change
               </div>
             </div>
             <div class="orderpanel">
               Proceed to Payment
+            </div>
               <div class="cancelpanel">Cancel Order
-                            </div>
+              </div>
             </div>
          </div>
     </main>
